--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,20 +57,58 @@
   padding: 20px;
 }
 
-.containerBlock {
-  align-self: flex-start;
-  margin-top: 10px;
-  margin-bottom: 10px;
+/* CONTAINER BLOCK */
+.containerBlock:not(.simple) {
+  position: relative;
+  margin-top: 50px;
+  margin-bottom: 50px;
   padding: 20px;
   border: 2px solid white;
   border-color: white;
   border-radius: 10px;
+
+  min-width: 650px;
+  max-width: min(90%, 700px);
+  height: 500px;
 }
 
-.containerBlock#right {
-  margin-left: auto;
+.containerBlock:not(.simple) .description {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 20px;
+  color: white;
 }
 
-.containerBlock#left {
+
+.containerBlock img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.containerBlock.simple {
+  font-size: 3.2em;
+}
+
+.containerBlock.simple .description {
+  position: absolute;
+  bottom: 20px;
+  left: 10px;
+  right: 10px;
+
+  font-size: 1.2em;
+}
+
+.containerBlock.left {
   margin-right: auto;
+}
+
+.containerBlock.right {
+  margin-left: auto;
 }
