--- a/client/src/App.css
+++ b/client/src/App.css
@@ -85,38 +85,40 @@
   border-radius: 10px;
   min-width: 650px;
   max-width: min(90%, 700px);
-  height: 500px;
+  height: 650px;
   overflow: hidden;
   /* allow flex children to shrink properly */
   min-height: 0;
 }
 
-/* Only when no image exists */
 .containerBlock:not(.simple):not(:has(img))::before {
   content: "";
   flex: 1 1 auto;   /* behaves like the image space */
 }
 
-/* image: fill the flex area but stay behind by z-index 0 */
 .containerBlock img {
   flex: 1 1 auto;
   width: 100%;
-  height: 100%;       /* fill the flex area */
-  object-fit: cover;  /* crop nicely */
+  height: 100%;
+  object-fit: cover;
   position: relative;
   z-index: 0;
   min-height: 0;      /* IMPORTANT for flex children to not overflow */
+  mask-image: linear-gradient(to bottom, black 70%, transparent);
 }
 
-/* subtitle sits on top */
-.containerBlock:not(.simple) .subtitle {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: 20px;
+.containerBlock:not(.simple) .projectTitle {
+  position: relative;
+  padding-top: 20px;
   font-size: 1.2em;
   z-index: 3;
+}
+
+.projectTitle h2 {
+  margin: 10px;
+}
+.projectTitle h3 {
+  margin: 0;
 }
 
 /* description must be above the image */
@@ -166,7 +168,7 @@
   flex: 1 1 auto;
   width: 100%;
   height: 100%;       /* fill the flex area */
-  object-fit: cover;  /* crop nicely */
+  object-fit: contain;  /* crop nicely */
   position: relative;
   z-index: 0;
   min-height: 0;      /* IMPORTANT for flex children to not overflow */
