--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@
 a {
   font-weight: 500;
   color: white;
-  background-color: black;
+  /*background-color: black;*/
   text-decoration: inherit;
 }
 a:hover {
