--- a/client/src/App.css
+++ b/client/src/App.css
@@ -85,9 +85,9 @@
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 20px;
+  min-height: 650px;
   min-width: 650px;
   max-width: min(90%, 700px);
-  height: 650px;
   overflow: hidden;
   /* allow flex children to shrink properly */
   min-height: 0;
@@ -110,7 +110,7 @@
 }
 
 .projectTitle h2 {
-  margin: 10px;
+  margin: 0;
 }
 .projectTitle h3 {
   margin: 0;
@@ -151,8 +151,6 @@
 }
 
 .containerBlock.simple .description {
-
-
   font-size: 1.0em;
 }
 
@@ -165,6 +163,8 @@
   position: relative;
   z-index: 0;
   min-height: 0;      /* IMPORTANT for flex children to not overflow */
+  mask-image: linear-gradient(to bottom, black 70%, transparent);
+
 }
 
 .containerBlock.left {
@@ -191,6 +191,11 @@
   text-align: left;
 }
 
+.containerBlock.simple.center {
+  border-left: 2px solid white;
+  border-right: 2px solid white;
+}
+
 /* FOOTER */
 
 /* 
@@ -204,10 +209,12 @@
   display: flex;
   flex-direction: column;
   width: 1280px;
-  background: gray;
   justify-content: center;
   align-items: center;
   margin: auto;
+  border-top: 2px solid white;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 
 @media (min-width: 768px) {
