--- a/client/src/App.css
+++ b/client/src/App.css
@@ -114,6 +114,7 @@
 }
 .projectTitle h3 {
   margin: 0;
+  padding-bottom: 0.5em;
 }
 
 /* description must be above the image */
@@ -127,20 +128,20 @@
 .containerBlock.simple {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   position: relative;
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 20px;
-  min-width: 650px;
+  min-height: 450px;
   max-width: min(90%, 700px);
+  min-width: 650px;
   overflow: hidden;
   /* allow flex children to shrink properly */
-  min-height: 0;
 }
 
 /* subtitle sits on top */
-.containerBlock.simple .subtitle {
+.containerBlock.simple .subtitle{
   position: absolute;
   top: 0;
   left: 0;
@@ -159,12 +160,14 @@
   flex: 1 1 auto;
   width: 100%;
   height: 100%;       /* fill the flex area */
+  max-height: 500px;
   object-fit: contain;  /* crop nicely */
   position: relative;
   z-index: 0;
   min-height: 0;      /* IMPORTANT for flex children to not overflow */
   mask-image: linear-gradient(to bottom, black 70%, transparent);
-
+  border-radius: 20px;
+  
 }
 
 .containerBlock.left {
